# heiter

./: README.md  main.py  pyproject.toml
api/v1/endpoints/: __init__.py
api/v1/endpoints/gpt/: create_completions.py  schemas.py
core/: config.py
models/: user.py
src/: docker-compose.yml
src/app/: Dockerfile  main.py  pyproject.toml
src/app/api/v1/auth_logic/: __init__.py  layer.py
src/app/api/v1/dependencies/: auth.py
src/app/api/v1/edgetts/: __init__.py  layer.py
src/app/api/v1/endpoints/: __init__.py
src/app/api/v1/endpoints/auth/: __init__.py  login.py  register.py  schemas.py
src/app/api/v1/endpoints/gpt/: create_completions.py  schemas.py
src/app/api/v1/endpoints/tts/: __init__.py  schemas.py  speech.py
src/app/api/v1/steosvoice/: __init__.py  layer.py  urls.py
src/app/core/: clients.py  config.py
src/app/models/: user.py
src/app/models/migrations/: 0001_initial.py  0002_auto_20260511_1640.py
src/app/redis_db/: __init__.py  client.py
