[project]
name = "heiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "tortoise-orm>=1.1.7",
]
