[project]
name = "heiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "ruff>=0.15.12",
    "tortoise-orm>=1.1.7",
]

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4

# Включаем серьёзные правила
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "ASYNC", # async best practices
]

# Что обычно можно ослабить
lint.ignore = [
    "E501",  # длина строки (мы её контролируем line-length)
    "RUF001",
    "RUF002"
]

# Строгая работа с импортами
[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["core", "app"]

# Запрет неиспользуемых аргументов (кроме _)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
